--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #161d31;
+  color: #d0d2d6!important;
+}
+
+h1, label {
+  color: #d0d2d6!important;
 }
 
 a {
@@ -20,7 +29,6 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: #d0d2d6!important;
   }
 }
