--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,11 +8,12 @@ body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: #161d31;
-  color: #d0d2d6!important;
+  color: #d0d2d6 !important;
 }
 
-h1, label {
-  color: #d0d2d6!important;
+h1,
+label {
+  color: #d0d2d6 !important;
 }
 
 a {
@@ -24,11 +25,17 @@ a {
   box-sizing: border-box;
 }
 
+table,
+th,
+td {
+  border: 1px solid;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
-    color: #d0d2d6!important;
+    color: #d0d2d6 !important;
   }
 }
