--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,28 +1,21 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #161d31;
-  color: #d0d2d6 !important;
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;300;400;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-2xl mb-4;
+  }
+  h2 {
+    @apply text-xl mb-4;
+  }
+  fieldset {
+    /* @apply border-2 px-4 py-4 mb-4; */
+  }
 }
 
-h1,
-label {
-  color: #d0d2d6 !important;
-}
-
-a {
-  color: inherit;
-  text-decoration: underline;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-table,
-th,
-td {
-  border: 1px solid;
+.header-calc {
+  width: calc(100% - calc(1.5rem * 2) - 16.25rem);
 }
